--- a/.htaccess
+++ b/.htaccess
@@ -11,11 +11,11 @@ deny from all
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /cocktail-recipes/
+RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /cocktail-recipes/index.php [L]
+RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
