--- a/wp-content/themes/cocktails/frontend-source/package.json
+++ b/wp-content/themes/cocktails/frontend-source/package.json
@@ -100,6 +100,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "webpack": "^3.8.1"
