--- a/wp-content/themes/cocktails/frontend-source/package.json
+++ b/wp-content/themes/cocktails/frontend-source/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.3.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "reset-css": "^4.0.1",
